feat: Add created_at, start_date and next_due_date to Client table

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -237,10 +237,13 @@
                                             Status</th>
                                         <th
                                             class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Data Início</th>
+                                            Criação</th>
                                         <th
                                             class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                            Próx. Venc.</th>
+                                            Pgto Atual</th>
+                                        <th
+                                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                            Próx. Pgto</th>
                                         <th
                                             class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                             Pagamentos</th>
